# TOPG

./: .gitignore  LICENSE.md  README.md  docker-compose.server.yml  docker-compose.webui.yml  docker-compose.yml
.github/workflows/: build-server.yml
public/: index.html  script.js  style.css
server/: .dockerignore  CMakeLists.txt  Dockerfile  build.sh  gpustatserver.cpp  test_parsing.cpp  topgsrv.cpp  vcpkg.json
webui/: .dockerignore  Dockerfile  index.html  script.js  style.css
